<resources>
    <string name="app_name">Findmate</string>
    <string name="SignIn">Войти</string>
    <string name="buttBack">Назад</string>
    <string name="SignUp">Регистрация</string>
    <string name="Menu1">Добро пожаловать!</string>
    <string name="Menu2">Мы рады видеть Вас в нашем приложении по поиску сотрудников. Пройдите быструю регистрацию или войдите в свой аккаунт</string>
    <string name="default_web_client_id">YOUR_CLIENT_ID</string>
    <string name="user_name">User Name</string>
    <string name="enter_message">Введите сообщение...</string>
    <string name="no_account_create">Нет аккаунта? Создайте его!</string>
    <string name="back">Назад</string>
    <string name="welcome_back">С возвращением!</string>
    <string name="welcome_message">Мы рады снова вас видеть в нашем приложении. Пройдите быструю аутентификацию и пользуйтесь нашими возможностями!</string>
    <string name="email_hint">Почта</string>
    <string name="password_hint">Пароль</string>
    <string name="next">Далее</string>
    <string name="visible_password">Видимый пароль</string>
    <string name="google">Гугл</string>
    <string name="exit_account">Выйти из аккаунта</string>
    <string name="name_surname">Имя Фамилия</string>
    <string name="edit_profile">Редактирование профиля</string>
    <string name="profile_visibility">Видимость профиля</string>
    <string name="search_preferences">Предпочтения поиска</string>
    <string name="settings">Настройки</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="birth_date">Дата рождения</string>
    <string name="years">** лет</string>
    <string name="country">Страна</string>
    <string name="city">Город</string>
    <string name="specialty">Специальность</string>
    <string name="skills">Навыки</string>
    <string name="profile_description">Описание профиля</string>
    <string name="additional_description">Дополнительное описание</string>
    <string name="creation_form">Создание анкеты</string>
    <string name="notifications">Уведомления</string>
    <string name="theme">Тема</string>
    <string name="language">Язык</string>
    <string name="account_settings">Настройки аккаунта</string>
    <string name="support">Поддержка</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="already_have_account">Уже есть аккаунт? Войдите в него!</string>
    <string name="name">Имя</string>
    <string name="description">Описание</string>
</resources>
